--- a/ecd/jupyter/new-data.ipynb
+++ b/ecd/jupyter/new-data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "outputs": [],
    "source": [
     "import numpy as np                \n",
@@ -29,15 +29,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-15T10:49:52.064974100Z",
-     "start_time": "2025-05-15T10:49:51.083935900Z"
+     "end_time": "2025-05-15T12:11:15.068620Z",
+     "start_time": "2025-05-15T12:11:15.028131400Z"
     }
    },
    "id": "189d752f13e679c2"
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "outputs": [
     {
      "name": "stdout",
@@ -74,15 +74,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-15T10:49:53.049885600Z",
-     "start_time": "2025-05-15T10:49:52.062958900Z"
+     "end_time": "2025-05-15T12:11:15.146719700Z",
+     "start_time": "2025-05-15T12:11:15.038681400Z"
     }
    },
    "id": "374de39660eac2dd"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "outputs": [
     {
      "name": "stdout",
@@ -115,15 +115,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-15T10:49:59.838606700Z",
-     "start_time": "2025-05-15T10:49:53.060425900Z"
+     "end_time": "2025-05-15T12:11:18.445050200Z",
+     "start_time": "2025-05-15T12:11:15.153596100Z"
     }
    },
    "id": "a22fcd76032f5d23"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "outputs": [
     {
      "name": "stdout",
@@ -183,8 +183,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-15T10:50:18.511737800Z",
-     "start_time": "2025-05-15T10:49:59.835579900Z"
+     "end_time": "2025-05-15T12:11:23.621197600Z",
+     "start_time": "2025-05-15T12:11:18.452052500Z"
     }
    },
    "id": "c1ed8d5edff2a1bd"
@@ -203,51 +203,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Features tensor shape: (15300, 78, 64)\n",
-      "Generated 50 sentences from 736 characters.\n",
-      "Sentence 0: YOU USE PAPER.\n",
-      "Sentence 1: YOU MAKE MUSIC.\n",
-      "Sentence 2: SHE EATS PAPER\n",
-      "Sentence 3: YOU MAKE MUSIC.\n",
-      "Sentence 4: THEY USE POEMS.\n",
+      "Generated 50 sentences from 715 characters.\n",
+      "Sentence 0: HE WRITES GAMES.\n",
+      "Sentence 1: I SEE WATER.\n",
+      "Sentence 2: HE READS PAPER.\n",
+      "Sentence 3: THEY WRITE GAMES.\n",
+      "Sentence 4: I MAKE FOOD.\n",
       "Character to sentence mapping (first 10 characters):\n",
-      "Char 0: 'Y', Sentence 0, Position 0\n",
-      "Char 1: 'O', Sentence 0, Position 1\n",
-      "Char 2: 'U', Sentence 0, Position 2\n",
-      "Char 3: ' ', Sentence 0, Position 3\n",
-      "Char 4: 'U', Sentence 0, Position 4\n",
-      "Char 5: 'S', Sentence 0, Position 5\n",
-      "Char 6: 'E', Sentence 0, Position 6\n",
-      "Char 7: ' ', Sentence 0, Position 7\n",
-      "Char 8: 'P', Sentence 0, Position 8\n",
-      "Char 9: 'A', Sentence 0, Position 9\n",
+      "Char 0: 'H', Sentence 0, Position 0\n",
+      "Char 1: 'E', Sentence 0, Position 1\n",
+      "Char 2: ' ', Sentence 0, Position 2\n",
+      "Char 3: 'W', Sentence 0, Position 3\n",
+      "Char 4: 'R', Sentence 0, Position 4\n",
+      "Char 5: 'I', Sentence 0, Position 5\n",
+      "Char 6: 'T', Sentence 0, Position 6\n",
+      "Char 7: 'E', Sentence 0, Position 7\n",
+      "Char 8: 'S', Sentence 0, Position 8\n",
+      "Char 9: ' ', Sentence 0, Position 9\n",
       "\n",
-      "Mapping 736 P300 responses to characters in sentences\n",
-      "Created ECD training dataset with 736 samples\n",
-      "Created 686 context samples for NLP model training\n",
-      "Created 686 combined samples for DFM training\n",
+      "Mapping 715 P300 responses to characters in sentences\n",
+      "Created ECD training dataset with 715 samples\n",
+      "Created 665 context samples for NLP model training\n",
+      "Created 665 combined samples for DFM training\n",
       "\n",
       "Example of ECD training data:\n",
-      "Target character: 'Y'\n",
-      "From sentence 0: 'YOU USE PAPER.'\n",
+      "Target character: 'H'\n",
+      "From sentence 0: 'HE WRITES GAMES.'\n",
       "At position 0\n",
       "Feature shape: (78, 64)\n",
       "\n",
       "Example of NLP context data:\n",
-      "Context: 'Y'\n",
-      "Target: 'O'\n",
-      "From sentence 0: 'YOU USE PAPER.'\n",
+      "Context: 'H'\n",
+      "Target: 'E'\n",
+      "From sentence 0: 'HE WRITES GAMES.'\n",
       "\n",
       "Example of combined DFM data:\n",
-      "Context: 'Y'\n",
-      "Target: 'O'\n",
-      "From sentence 0: 'YOU USE PAPER.'\n",
+      "Context: 'H'\n",
+      "Target: 'E'\n",
+      "From sentence 0: 'HE WRITES GAMES.'\n",
       "Feature shape: (78, 64)\n"
      ]
     }
@@ -430,6 +430,7 @@
     "    print(f\"From sentence {example['sentence_idx']}: '{sentences[example['sentence_idx']]}'\")\n",
     "    print(f\"At position {example['position_idx']}\")\n",
     "    print(f\"Feature shape: {example['feature'].shape}\")\n",
+    "    \n",
     "\n",
     "print(\"\\nExample of NLP context data:\")\n",
     "if sentence_contexts:\n",
@@ -449,11 +450,127 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-15T10:50:40.584819800Z",
-     "start_time": "2025-05-15T10:50:18.519094300Z"
+     "end_time": "2025-05-15T12:11:28.811050300Z",
+     "start_time": "2025-05-15T12:11:23.622250800Z"
     }
    },
    "id": "af5439f909b4474d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocabulary size: 62\n",
+      "Model loaded from ../model/api/char_predictor.pth.\n",
+      "\n",
+      "Added NLP probability vectors to each ECD sample.\n",
+      "Target character: I\n",
+      "Context prefix: 'HE WR'\n",
+      "values: {'E': 0.2353, 'O': 0.2265, 'I': 0.111, 'A': 0.0716, 'o': 0.0601, 'T': 0.0355}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add next-char prediction probabilities to each DFM sample as additional feature\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import string\n",
+    "\n",
+    "\n",
+    "# Define character set (a-z, A-Z, 0-9)\n",
+    "all_chars = list(string.ascii_lowercase + string.ascii_uppercase + string.digits)\n",
+    "char2idx = {ch: idx for idx, ch in enumerate(all_chars)}\n",
+    "idx2char = {idx: ch for ch, idx in char2idx.items()}\n",
+    "vocab_size = len(all_chars)\n",
+    "\n",
+    "print(\"Vocabulary size:\", vocab_size)\n",
+    "\n",
+    "class CharPredictor(nn.Module):\n",
+    "    def __init__(self, vocab_size, embed_dim=64, hidden_dim=128):\n",
+    "        super(CharPredictor, self).__init__()\n",
+    "        self.embedding = nn.Embedding(vocab_size, embed_dim)\n",
+    "        self.lstm = nn.LSTM(embed_dim, hidden_dim, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_dim, vocab_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        embed = self.embedding(x)\n",
+    "        _, (hidden, _) = self.lstm(embed)\n",
+    "        hidden = hidden.squeeze(0)\n",
+    "        out = self.fc(hidden)\n",
+    "        return out\n",
+    "    \n",
+    "def load_model(path=\"../model/api/char_predictor.pth\"):\n",
+    "    model = CharPredictor(vocab_size)\n",
+    "    model.load_state_dict(torch.load(path))\n",
+    "    model.eval()\n",
+    "    print(f\"Model loaded from {path}.\")\n",
+    "    return model\n",
+    "\n",
+    "\n",
+    "def predict_next_chars(model, sentence, top_k=5):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        input_seq = [char2idx[ch] for ch in sentence if ch in char2idx]\n",
+    "        if not input_seq:\n",
+    "            raise ValueError(\"Input sentence must contain at least one known character.\")\n",
+    "\n",
+    "        input_seq = torch.tensor(input_seq).unsqueeze(0)\n",
+    "        output = model(input_seq)\n",
+    "        probs = F.softmax(output, dim=-1).squeeze(0)\n",
+    "\n",
+    "        top_probs, top_indices = torch.topk(probs, top_k)\n",
+    "\n",
+    "        result = {}\n",
+    "        for prob, idx in zip(top_probs, top_indices):\n",
+    "            result[idx2char[idx.item()]] = round(prob.item(), 4)\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Load pretrained NLP model\n",
+    "nlp_model = load_model()\n",
+    "\n",
+    "# Add NLP vector to each ECD sample\n",
+    "for sample in ecd_train_data:\n",
+    "    sent_idx = sample[\"sentence_idx\"]\n",
+    "    pos_idx = sample[\"position_idx\"]\n",
+    "    \n",
+    "    if pos_idx == 0 :\n",
+    "        continue\n",
+    "    \n",
+    "    full_sentence = sentences[sent_idx]\n",
+    "    prefix = full_sentence[:pos_idx]  # context before the target char\n",
+    "    \n",
+    "    nlp_prob_dict = predict_next_chars(nlp_model, prefix, top_k=6)\n",
+    "\n",
+    "    # Convert to vector form over consistent vocabulary\n",
+    "    # prob_vector = np.array([nlp_prob_dict.get(char, 0.0) for char in idx2char.values()])\n",
+    "    \n",
+    "    sample[\"nlp_prob_vector\"] = nlp_prob_dict\n",
+    "\n",
+    "print(\"\\nAdded NLP probability vectors to each ECD sample.\")\n",
+    "\n",
+    "# Show an example with the added vector\n",
+    "if ecd_train_data:\n",
+    "    example = ecd_train_data[5]\n",
+    "    print(f\"Target character: {example['target_char']}\")\n",
+    "    print(f\"Context prefix: '{sentences[example['sentence_idx']][:example['position_idx']]}'\")\n",
+    "    # print(f\"NLP prob vector shape: {example['nlp_prob_vector'].shape}\")\n",
+    "    print(f\"values: {example['nlp_prob_vector']}\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-05-15T12:11:29.108453900Z",
+     "start_time": "2025-05-15T12:11:28.815978Z"
+    }
+   },
+   "id": "e5f5f70563f4e1cd"
   }
  ],
  "metadata": {
