--- a/ecd/jupyter/new-data.ipynb
+++ b/ecd/jupyter/new-data.ipynb
@@ -458,19 +458,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Vocabulary size: 62\n",
-      "Model loaded from ../model/api/char_predictor.pth.\n",
-      "\n",
-      "Added NLP probability vectors to each ECD sample.\n",
-      "Target character: I\n",
-      "Context prefix: 'HE WR'\n",
-      "values: {'E': 0.2353, 'O': 0.2265, 'I': 0.111, 'A': 0.0716, 'o': 0.0601, 'T': 0.0355}\n"
+      "Model loaded from ../model/api/char_predictor.pth.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'ecd_train_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 62\u001B[0m\n\u001B[0;32m     59\u001B[0m nlp_model \u001B[38;5;241m=\u001B[39m load_model()\n\u001B[0;32m     61\u001B[0m \u001B[38;5;66;03m# Add NLP vector to each ECD sample\u001B[39;00m\n\u001B[1;32m---> 62\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m sample \u001B[38;5;129;01min\u001B[39;00m \u001B[43mecd_train_data\u001B[49m:\n\u001B[0;32m     63\u001B[0m     sent_idx \u001B[38;5;241m=\u001B[39m sample[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124msentence_idx\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n\u001B[0;32m     64\u001B[0m     pos_idx \u001B[38;5;241m=\u001B[39m sample[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mposition_idx\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'ecd_train_data' is not defined"
      ]
     }
    ],
@@ -558,19 +564,30 @@
     "# Show an example with the added vector\n",
     "if ecd_train_data:\n",
     "    example = ecd_train_data[5]\n",
+    "    print(f\"feature shape: {example['feature'].shape}\")\n",
     "    print(f\"Target character: {example['target_char']}\")\n",
     "    print(f\"Context prefix: '{sentences[example['sentence_idx']][:example['position_idx']]}'\")\n",
     "    # print(f\"NLP prob vector shape: {example['nlp_prob_vector'].shape}\")\n",
-    "    print(f\"values: {example['nlp_prob_vector']}\")\n"
+    "    print(f\"values: {example['nlp_prob_vector']}\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-15T12:11:29.108453900Z",
-     "start_time": "2025-05-15T12:11:28.815978Z"
+     "end_time": "2025-05-31T10:30:13.719729800Z",
+     "start_time": "2025-05-31T10:30:09.034280400Z"
     }
    },
    "id": "e5f5f70563f4e1cd"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fbb3479c89004d4f"
   }
  ],
  "metadata": {
