--- a/ecd/jupyter/new_data_final.ipynb
+++ b/ecd/jupyter/new_data_final.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-31T11:04:24.234787Z",
-     "start_time": "2025-05-31T11:04:12.804448700Z"
+     "end_time": "2025-05-31T11:25:51.047298600Z",
+     "start_time": "2025-05-31T11:25:39.150386800Z"
     }
    },
    "outputs": [
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: Characters file not found at characters.txt\n",
+      "Loaded characters: ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789_\n",
       "\n",
       "Loading training data from: ../data/Contributor_I_Train.mat\n",
       "Number of trials based on Signal array: 85\n",
@@ -82,6 +82,39 @@
       "\n",
       "Total samples collected across all characters: 15300\n",
       "\n",
+      "--- Samples for Character 'A' (First 5) ---\n",
+      "Printing the first 2 samples for character \t'E\t':\n",
+      "\n",
+      "--- Sample 1 for \t'E\t' (Shape: (78, 64)) ---\n",
+      "[[-0.33714178 -0.9983543  -1.3232313  ... -1.1834699  -0.54913986\n",
+      "  -2.146467  ]\n",
+      " [-0.4871011  -0.9940677  -1.1646951  ... -1.0431285  -0.55491173\n",
+      "  -2.1276486 ]\n",
+      " [-0.5778563  -0.9702029  -0.9978453  ... -0.8722612  -0.5385763\n",
+      "  -2.0364172 ]\n",
+      " ...\n",
+      " [-1.0796474  -0.7509957  -0.81012434 ... -1.5100384  -1.3592697\n",
+      "  -1.2251195 ]\n",
+      " [-1.0141852  -0.7882366  -0.8428319  ... -1.518697   -1.2910079\n",
+      "  -1.3577971 ]\n",
+      " [-0.97403663 -0.86051106 -0.94864607 ... -1.544415   -1.2291203\n",
+      "  -1.4459875 ]]\n",
+      "\n",
+      "--- Sample 2 for \t'E\t' (Shape: (78, 64)) ---\n",
+      "[[ 0.10983302 -0.5912167  -0.13849093 ...  1.2149168   1.2025372\n",
+      "   0.03397316]\n",
+      " [ 0.25884238 -0.40057978  0.04210157 ...  1.1914978   1.2291273\n",
+      "   0.17662953]\n",
+      " [ 0.43082425 -0.16021492  0.26143023 ...  1.1193072   1.2058557\n",
+      "   0.27885613]\n",
+      " ...\n",
+      " [-0.6707997  -0.16460213  0.14333405 ... -0.06619231 -0.4230349\n",
+      "  -0.9840886 ]\n",
+      " [-0.68862873 -0.17394924  0.05029703 ... -0.15256847 -0.52998257\n",
+      "  -1.2219926 ]\n",
+      " [-0.7004211  -0.17817384 -0.06943762 ... -0.23664352 -0.6175329\n",
+      "  -1.4326991 ]]\n",
+      "\n",
       "Script finished.\n"
      ]
     }
@@ -106,7 +139,7 @@
     "# --- Configuration ---\n",
     "contributor_selected = \"I\"\n",
     "contributor_train_file_path = f\"../data/Contributor_{contributor_selected}_Train.mat\"\n",
-    "characters_file_path = \"characters.txt\"\n",
+    "characters_file_path = \"../data/characters.txt\"\n",
     "channels = list(range(64))\n",
     "initial_sampling_frequency = 240\n",
     "down_sampling_frequency = 120\n",
@@ -287,6 +320,24 @@
     "    total_samples_collected += count\n",
     "\n",
     "print(f\"\\nTotal samples collected across all characters: {total_samples_collected}\")\n",
+    "\n",
+    "\n",
+    "# --- Print First 5 Samples for Character 'A' --- \n",
+    "print(\"\\n--- Samples for Character 'A' (First 5) ---\")\n",
+    "char_to_print = 'E'\n",
+    "num_samples_to_print = 2\n",
+    "\n",
+    "if char_to_print in samples and samples[char_to_print]:\n",
+    "    print(f\"Printing the first {min(num_samples_to_print, len(samples[char_to_print]))} samples for character \t'{char_to_print}\t':\")\n",
+    "    for i, sample_data in enumerate(samples[char_to_print][:num_samples_to_print]):\n",
+    "        print(f\"\\n--- Sample {i+1} for \t'{char_to_print}\t' (Shape: {sample_data.shape}) ---\")\n",
+    "        # Set numpy print options for better readability if needed\n",
+    "        # np.set_printoptions(threshold=np.inf) # To print the full array without truncation\n",
+    "        print(sample_data)\n",
+    "        # np.set_printoptions(threshold=1000) # Reset to default or another value if needed\n",
+    "else:\n",
+    "    print(f\"No samples found for character \t'{char_to_print}\t' or the list is empty.\")\n",
+    "\n",
     "\n",
     "print(\"\\nScript finished.\")\n"
    ]
