--- a/ecd/jupyter/new_data_final.ipynb
+++ b/ecd/jupyter/new_data_final.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-31T11:25:51.047298600Z",
-     "start_time": "2025-05-31T11:25:39.150386800Z"
+     "end_time": "2025-05-31T11:39:51.096075100Z",
+     "start_time": "2025-05-31T11:39:38.146842800Z"
     }
    },
    "outputs": [
@@ -115,6 +115,8 @@
       " [-0.7004211  -0.17817384 -0.06943762 ... -0.23664352 -0.6175329\n",
       "  -1.4326991 ]]\n",
       "\n",
+      "--- Non-zero Samples Check ---\n",
+      "A  B  C  D  E  F  G  H  I  J  K  L  M  N  O  P  Q  R  T  U  V  W  X  Y  Z  4  6  8  _  \n",
       "Script finished.\n"
      ]
     }
@@ -337,6 +339,14 @@
     "        # np.set_printoptions(threshold=1000) # Reset to default or another value if needed\n",
     "else:\n",
     "    print(f\"No samples found for character \t'{char_to_print}\t' or the list is empty.\")\n",
+    "\n",
+    "# print all char has the nonzero samples\n",
+    "print(\"\\n--- Non-zero Samples Check ---\")\n",
+    "for char, char_samples in samples.items():\n",
+    "    count = len(char_samples)\n",
+    "    if count > 0:\n",
+    "        # print without new line\n",
+    "            print(f\"{char} \", end=' ')\n",
     "\n",
     "\n",
     "print(\"\\nScript finished.\")\n"
