new data --version

--- a/ecd/jupyter/data_processing/sentences.ipynb
+++ b/ecd/jupyter/data_processing/sentences.ipynb
@@ -12,18 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attempting to load samples from: ../data/combined_samples.pkl\n",
-      "Successfully loaded samples dictionary.\n",
+      "Attempting to load sample groups from: ../data/sample_groups.pkl\n",
+      "Successfully loaded sample groups dictionary.\n",
       "\n",
-      "Loaded data keys: ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z', '1', '2', '3', '4', '5', '6', '7', '8', '9', '_']\n",
-      "Number of samples for 'A': 720\n",
-      "Shape of first 'A' sample: (78, 64)\n"
+      "--- Example Access --- \n",
+      "Character A, Set set1 has 4 chunks.\n",
+      "  First chunk contains 180 samples.\n",
+      "    Shape of the first sample in the first chunk: (78, 64)\n"
      ]
     }
    ],
@@ -31,33 +32,34 @@
     "import pickle\n",
     "import os\n",
     "\n",
-    "def load_samples(filepath=\"../data/combined_samples.pkl\"):\n",
-    "    \"\"\"Loads the combined samples dictionary from a pickle file.\n",
+    "def load_sample_groups(filepath=\"../data/sample_groups.pkl\"):\n",
+    "    \"\"\"Loads the grouped samples dictionary from a pickle file.\n",
     "\n",
     "    Args:\n",
-    "        filepath (str): The path to the pickle file containing the samples dictionary.\n",
-    "                        Defaults to 'combined_samples.pkl' in the current directory.\n",
+    "        filepath (str): The path to the pickle file containing the sample groups dictionary.\n",
+    "                        Defaults to \t\"sample_groups.pkl\t\" in the current directory.\n",
     "\n",
     "    Returns:\n",
-    "        dict: The loaded samples dictionary, or None if loading fails.\n",
+    "        dict: The loaded sample_groups dictionary, or None if loading fails.\n",
+    "              Structure: {char: {set_name: [chunk1, chunk2, ...], ...}, ...}\n",
+    "              where each chunk is a list of numpy arrays (samples).\n",
     "    \"\"\"\n",
-    "    print(f\"Attempting to load samples from: {filepath}\")\n",
+    "    print(f\"Attempting to load sample groups from: {filepath}\")\n",
     "    if not os.path.exists(filepath):\n",
-    "        print(f\"Error: File not found at {filepath}\")\n",
+    "        print(f\"Error: File not found at {filepath}. Please run the grouping script first.\")\n",
     "        return None\n",
     "    \n",
     "    try:\n",
     "        with open(filepath, \"rb\") as f:\n",
-    "            loaded_samples = pickle.load(f)\n",
-    "        print(\"Successfully loaded samples dictionary.\")\n",
-    "        # Optional: Add a check to ensure it's a dictionary\n",
-    "        if isinstance(loaded_samples, dict):\n",
-    "            return loaded_samples\n",
+    "            loaded_groups = pickle.load(f)\n",
+    "        print(\"Successfully loaded sample groups dictionary.\")\n",
+    "        # Optional: Add a check to ensure it\t\"s a dictionary\n",
+    "        if isinstance(loaded_groups, dict):\n",
+    "            return loaded_groups\n",
     "        else:\n",
-    "            print(f\"Error: Loaded object is not a dictionary (type: {type(loaded_samples)}). Returning None.\")\n",
+    "            print(f\"Error: Loaded object is not a dictionary (type: {type(loaded_groups)}). Returning None.\")\n",
     "            return None\n",
     "    except FileNotFoundError:\n",
-    "        # This case is already handled by os.path.exists, but kept for robustness\n",
     "        print(f\"Error: File not found at {filepath}\")\n",
     "        return None\n",
     "    except pickle.UnpicklingError:\n",
@@ -68,20 +70,35 @@
     "        return None\n",
     "\n",
     "\n",
-    "loaded_data = load_samples()\n",
-    "if loaded_data:\n",
-    "    print(\"\\nLoaded data keys:\", list(loaded_data.keys()))\n",
-    "    # Access data like: loaded_data['A']\n",
-    "    if 'A' in loaded_data and loaded_data['A']:\n",
-    "        print(f\"Number of samples for 'A': {len(loaded_data['A'])}\")\n",
-    "        print(f\"Shape of first 'A' sample: {loaded_data['A'][0].shape}\")\n",
-    "\n"
+    "sample_groups_data = load_sample_groups()\n",
+    "\n",
+    "if sample_groups_data:\n",
+    "    print(\"\\n--- Example Access --- \")\n",
+    "    target_char = \t\"A\" # Example character\n",
+    "    target_set = \t\"set1\" # Example set\n",
+    "\n",
+    "    if target_char in sample_groups_data and target_set in sample_groups_data[target_char]:\n",
+    "        groups_for_set = sample_groups_data[target_char][target_set]\n",
+    "        num_chunks = len(groups_for_set)\n",
+    "        print(f\"Character {target_char}, Set {target_set} has {num_chunks} chunks.\")\n",
+    "        \n",
+    "        if num_chunks > 0:\n",
+    "            first_chunk = groups_for_set[0] # Get the first chunk (which is a list of samples)\n",
+    "            num_samples_in_chunk = len(first_chunk)\n",
+    "            print(f\"  First chunk contains {num_samples_in_chunk} samples.\")\n",
+    "            \n",
+    "            if num_samples_in_chunk > 0:\n",
+    "                first_sample_in_chunk = first_chunk[0] # Get the first sample (numpy array)\n",
+    "                print(f\"    Shape of the first sample in the first chunk: {first_sample_in_chunk.shape}\")\n",
+    "                # You can now work with \t\"first_sample_in_chunk\t\" or the entire \t\"first_chunk\t\" list\n",
+    "    else:\n",
+    "        print(f\"Could not find data for Character {target_char} and Set {target_set}.\")\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-31T12:45:44.658009900Z",
-     "start_time": "2025-05-31T12:45:44.060648800Z"
+     "end_time": "2025-05-31T13:43:57.775594200Z",
+     "start_time": "2025-05-31T13:43:56.841018500Z"
     }
    },
    "id": "189d752f13e679c2"
