add predictor at sentences

--- a/ecd/jupyter/data_processing/sentences.ipynb
+++ b/ecd/jupyter/data_processing/sentences.ipynb
@@ -102,6 +102,91 @@
     }
    },
    "id": "189d752f13e679c2"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Add next-char prediction probabilities"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "dbead4f00a928323"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Add next-char prediction probabilities to each DFM sample as additional feature\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import string\n",
+    "\n",
+    "\n",
+    "# Define character set (a-z, A-Z, 0-9)\n",
+    "all_chars = list(string.ascii_lowercase + string.ascii_uppercase + string.digits)\n",
+    "char2idx = {ch: idx for idx, ch in enumerate(all_chars)}\n",
+    "idx2char = {idx: ch for ch, idx in char2idx.items()}\n",
+    "vocab_size = len(all_chars)\n",
+    "\n",
+    "print(\"Vocabulary size:\", vocab_size)\n",
+    "\n",
+    "class CharPredictor(nn.Module):\n",
+    "    def __init__(self, vocab_size, embed_dim=64, hidden_dim=128):\n",
+    "        super(CharPredictor, self).__init__()\n",
+    "        self.embedding = nn.Embedding(vocab_size, embed_dim)\n",
+    "        self.lstm = nn.LSTM(embed_dim, hidden_dim, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_dim, vocab_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        embed = self.embedding(x)\n",
+    "        _, (hidden, _) = self.lstm(embed)\n",
+    "        hidden = hidden.squeeze(0)\n",
+    "        out = self.fc(hidden)\n",
+    "        return out\n",
+    "    \n",
+    "def load_model(path=\"../model/api/char_predictor.pth\"):\n",
+    "    model = CharPredictor(vocab_size)\n",
+    "    model.load_state_dict(torch.load(path))\n",
+    "    model.eval()\n",
+    "    print(f\"Model loaded from {path}.\")\n",
+    "    return model\n",
+    "\n",
+    "\n",
+    "def predict_next_chars(model, sentence, top_k=5):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        input_seq = [char2idx[ch] for ch in sentence if ch in char2idx]\n",
+    "        if not input_seq:\n",
+    "            raise ValueError(\"Input sentence must contain at least one known character.\")\n",
+    "\n",
+    "        input_seq = torch.tensor(input_seq).unsqueeze(0)\n",
+    "        output = model(input_seq)\n",
+    "        probs = F.softmax(output, dim=-1).squeeze(0)\n",
+    "\n",
+    "        top_probs, top_indices = torch.topk(probs, top_k)\n",
+    "\n",
+    "        result = {}\n",
+    "        for prob, idx in zip(top_probs, top_indices):\n",
+    "            result[idx2char[idx.item()]] = round(prob.item(), 4)\n",
+    "\n",
+    "        return result\n",
+    "\n",
+    "# Load pretrained NLP model\n",
+    "nlp_model = load_model()\n",
+    "\n",
+    "\n",
+    "# prefix = context before the target char\n",
+    "\n",
+    "# nlp_prob_dict = predict_next_chars(nlp_model, prefix, top_k=6)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fee7df9628f0876a"
   }
  ],
  "metadata": {
