--- a/ecd/jupyter/data_processing/character_identity.ipynb
+++ b/ecd/jupyter/data_processing/character_identity.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "# --- Configuration ---\n",
     "contributors_to_process = [\"I\", \"II\"]  # List of contributors to process\n",
-    "characters_file_path = \"../data/characters.txt\"  # Updated path\n",
+    "characters_file_path = \"../../data/characters.txt\"  # Updated path\n",
     "channels = list(range(64))\n",
     "initial_sampling_frequency = 240\n",
     "down_sampling_frequency = 120\n",
@@ -141,7 +141,7 @@
    "source": [
     "for contributor_selected in contributors_to_process:\n",
     "    print(f\"\\n{'=' * 20} Processing Contributor: {contributor_selected} {'=' * 20}\")\n",
-    "    contributor_data_file_path = f\"../data/Contributor_{contributor_selected}.mat\"\n",
+    "    contributor_data_file_path = f\"../../data/Contributor_{contributor_selected}.mat\"\n",
     "\n",
     "    # Check if data file exists for the current contributor\n",
     "    if not os.path.exists(contributor_data_file_path):\n",
@@ -780,12 +780,11 @@
     "import random\n",
     "import math\n",
     "\n",
-    "output_filepath = f\"../data/sample_groups.pkl\"\n",
+    "output_filepath = f\"../../data/sample_groups.pkl\"\n",
     "\n",
     "strategies = {\n",
     "    \"set1\": {\"chunk_size\": 30, \"random\": False},\n",
-    "    \"set2\": {\"chunk_size\": 15, \"random\": False},\n",
-    "    \"set3\": {\"chunk_size\": 20, \"random\": True}\n",
+    "    \"set2\": {\"chunk_size\": 20, \"random\": True}\n",
     "}\n",
     "\n",
     "print(\"\\nStarting sample grouping process...\")\n",
