--- a/ecd/jupyter/data_processing/data_analysis.ipynb
+++ b/ecd/jupyter/data_processing/data_analysis.ipynb
@@ -122,8 +122,8 @@
     "import pandas as pd\n",
     "\n",
     "# Load coordinates and channel names from CSV files\n",
-    "coordinates_file = \"../data/coordinates.csv\"\n",
-    "channels_file = \"../data/channels.csv\"\n",
+    "coordinates_file = \"../../data/coordinates.csv\"\n",
+    "channels_file = \"../../data/channels.csv\"\n",
     "\n",
     "coordinates = pd.read_csv(coordinates_file, header=None, names=[\"x\", \"y\"])\n",
     "channels = pd.read_csv(channels_file, header=None, names=[\"channel\"])\n",
@@ -229,7 +229,7 @@
     "for contributor in contributor_names:\n",
     "    for data_type in data_types:\n",
     "        print(f\"Processing Contributor {contributor} - {data_type} data\")\n",
-    "        file_path = f'../data/Contributor_{contributor}_{data_type}.mat'\n",
+    "        file_path = f'../../data/Contributor_{contributor}_{data_type}.mat'\n",
     "\n",
     "        # Check if the file exists\n",
     "        if not os.path.exists(file_path):\n",
