--- a/ecd/jupyter/data_processing/sentences.ipynb
+++ b/ecd/jupyter/data_processing/sentences.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -33,10 +33,10 @@
     "\n",
     "\n",
     "# --- Configuration ---\n",
-    "sample_groups_filepath = \"../data/sample_groups.pkl\" # Input: Grouped samples\n",
-    "sentences_filepath = \"../data/sentences.txt\"       # Input: Sentences file\n",
-    "model_path = \"../model/api/char_predictor.pth\" # Input: Pretrained NLP model path\n",
-    "output_filepath = \"../data/sentence_eeg_prob_data.pkl\" # Output: Combined data\n",
+    "sample_groups_filepath = \"../../data/sample_groups.pkl\" # Input: Grouped samples\n",
+    "sentences_filepath = \"../../data/sentences.txt\"       # Input: Sentences file\n",
+    "model_path = \"../../model/api/char_predictor.pth\" # Input: Pretrained NLP model path\n",
+    "output_filepath = \"../../data/sentence_eeg_prob_data.pkl\" # Output: Combined data\n",
     "\n",
     "# --- Helper Function to Load Sample Groups ---\n",
     "def load_sample_groups(filepath):\n",
@@ -84,7 +84,7 @@
     "        out = self.fc(hidden)\n",
     "        return out\n",
     "    \n",
-    "def load_nlp_model(path=\"../model/api/char_predictor.pth\"):\n",
+    "def load_nlp_model(path=\"../../model/api/char_predictor.pth\"):\n",
     "    model = CharPredictor(vocab_size)\n",
     "    model.load_state_dict(torch.load(path))\n",
     "    model.eval()\n",
@@ -114,8 +114,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-31T19:08:18.207964600Z",
-     "start_time": "2025-05-31T19:08:18.169076300Z"
+     "end_time": "2025-06-07T18:48:13.611261500Z",
+     "start_time": "2025-06-07T18:48:13.544665Z"
     }
    },
    "id": "189d752f13e679c2"
@@ -132,16 +132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attempting to load sample groups from: ../data/sample_groups.pkl\n",
+      "Attempting to load sample groups from: ../../data/sample_groups.pkl\n",
       "Successfully loaded sample groups dictionary.\n",
-      "Model loaded from ../model/api/char_predictor.pth.\n",
-      "Reading sentences from: ../data/sentences.txt\n",
+      "Model loaded from ../../model/api/char_predictor.pth.\n",
+      "Reading sentences from: ../../data/sentences.txt\n",
       "Read 800 sentences.\n",
       "\n",
       "Processing sentences to combine EEG chunks and probabilities...\n",
@@ -948,30 +948,29 @@
       "\n",
       "Finished processing. Collected data for 15470 character instances.\n",
       "\n",
-      "Saving combined data to: ../data/sentence_eeg_prob_data.pkl\n",
-      "Successfully saved combined data to ../data/sentence_eeg_prob_data.pkl.\n",
+      "Saving combined data to: ../../data/sentence_eeg_prob_data.pkl\n",
+      "Successfully saved combined data to ../../data/sentence_eeg_prob_data.pkl.\n",
       "\n",
       "Script finished.\n",
-      "Attempting to load processed data from: ../data/sentence_eeg_prob_data.pkl\n",
+      "Attempting to load processed data from: ../../data/sentence_eeg_prob_data.pkl\n",
       "Successfully loaded processed data.\n",
       "Loaded 15470 items.\n",
       "Example of first item: H\n",
-      "Example of first item: T\n",
       "Example of first item: THE QUICK DOG JUMPED OVER\n",
       "Example of first item: 1\n",
-      "Example of first item: [array([[-1.2835948 , -0.8696827 , -0.63357687, ..., -0.8235423 ,\n",
-      "        -0.7878795 , -0.60256517],\n",
-      "       [-1.289872  , -0.85476553, -0.64955145, ..., -0.6701227 ,\n",
-      "        -0.5584078 , -0.4237045 ],\n",
-      "       [-1.2481786 , -0.7888243 , -0.64355093, ..., -0.5354535 ,\n",
-      "        -0.35739008, -0.2570909 ],\n",
+      "Example of first item: [array([[-0.54037046, -1.6272256 , -0.8909307 , ..., -0.36527073,\n",
+      "        -0.45629573, -0.9330822 ],\n",
+      "       [-0.7337005 , -1.8734369 , -1.1107128 , ..., -0.46904737,\n",
+      "        -0.72463924, -1.0288155 ],\n",
+      "       [-0.9022075 , -2.0632687 , -1.289877  , ..., -0.5228547 ,\n",
+      "        -0.94493437, -1.1008296 ],\n",
       "       ...,\n",
-      "       [ 0.6414426 ,  0.82679033,  0.8949905 , ...,  0.7397481 ,\n",
-      "         0.8634642 ,  0.8789248 ],\n",
-      "       [ 0.5591661 ,  0.81037956,  0.9656031 , ...,  0.7616999 ,\n",
-      "         0.9122697 ,  0.9680821 ],\n",
-      "       [ 0.43155485,  0.71449965,  0.9222388 , ...,  0.7240543 ,\n",
-      "         0.8748701 ,  1.0227684 ]], dtype=float32)]\n",
+      "       [-1.4762    , -1.1797712 , -1.7743834 , ..., -1.6437798 ,\n",
+      "        -0.24375428, -1.5941732 ],\n",
+      "       [-1.3776388 , -1.12282   , -1.6979017 , ..., -1.7012546 ,\n",
+      "        -0.3126163 , -1.714043  ],\n",
+      "       [-1.2832029 , -1.011978  , -1.5232986 , ..., -1.697937  ,\n",
+      "        -0.3192157 , -1.7902619 ]], dtype=float32)]\n",
       "Example of first item: {'h': 0.6865, 'r': 0.0676, 'o': 0.0639, 'a': 0.0576, 'i': 0.0386}\n"
      ]
     }
@@ -1093,7 +1092,6 @@
     "    if final_data:\n",
     "        print(\"Example of first item:\", final_data[0][\"character\"])\n",
     "        print(\"Example of first item:\", final_data[0][\"prefix\"])\n",
-    "        print(\"Example of first item:\", final_data[0][\"sentence\"])\n",
     "        print(\"Example of first item:\", final_data[0][\"char_idx_in_sentence\"])\n",
     "        print(\"Example of first item:\", final_data[0][\"eeg_chunk\"][0:1])\n",
     "        print(\"Example of first item:\", final_data[0][\"next_char_probabilities\"])\n"
@@ -1101,8 +1099,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-31T19:08:27.071918500Z",
-     "start_time": "2025-05-31T19:08:18.181261500Z"
+     "end_time": "2025-06-07T18:48:22.833685700Z",
+     "start_time": "2025-06-07T18:48:13.579765900Z"
     }
    },
    "id": "fee7df9628f0876a"
