--- a/ecd/jupyter/model/probability-api.ipynb
+++ b/ecd/jupyter/model/probability-api.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "outputs": [
     {
      "name": "stderr",
@@ -41,8 +41,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-12T12:22:16.324478200Z",
-     "start_time": "2025-05-12T12:22:16.281945900Z"
+     "end_time": "2025-06-07T19:13:10.843731600Z",
+     "start_time": "2025-06-07T19:13:10.797672500Z"
     }
    },
    "id": "91660077f0ee896f"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "outputs": [
     {
      "name": "stdout",
@@ -81,8 +81,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-12T12:22:16.389384500Z",
-     "start_time": "2025-05-12T12:22:16.300479800Z"
+     "end_time": "2025-06-07T19:13:10.862660500Z",
+     "start_time": "2025-06-07T19:13:10.806718100Z"
     }
    },
    "id": "b440d4865810d2d8"
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "outputs": [],
    "source": [
     "class CharPredictor(nn.Module):\n",
@@ -119,8 +119,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-12T12:22:16.409829300Z",
-     "start_time": "2025-05-12T12:22:16.317479400Z"
+     "end_time": "2025-06-07T19:13:10.914890700Z",
+     "start_time": "2025-06-07T19:13:10.815318400Z"
     }
    },
    "id": "97e7f8b1d4fbfb63"
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "outputs": [],
    "source": [
     "def train_model(model, dataset, epochs=5, seq_len=10, batch_size=64):\n",
@@ -183,8 +183,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-12T12:22:16.426821800Z",
-     "start_time": "2025-05-12T12:22:16.337695800Z"
+     "end_time": "2025-06-07T19:13:10.917894700Z",
+     "start_time": "2025-06-07T19:13:10.824347600Z"
     }
    },
    "id": "b6800ba3b4d4a3b"
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "outputs": [],
    "source": [
     "def predict_next_chars(model, sentence, top_k=5):\n",
@@ -226,8 +226,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-12T12:22:16.427822900Z",
-     "start_time": "2025-05-12T12:22:16.351211700Z"
+     "end_time": "2025-06-07T19:13:10.917894700Z",
+     "start_time": "2025-06-07T19:13:10.834343600Z"
     }
    },
    "id": "b2b85223ec5412f9"
@@ -244,14 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "outputs": [],
    "source": [
-    "def save_model(model, path=\"../model/api/char_predictor.pth\"):\n",
+    "def save_model(model, path=\"../../model/api/char_predictor.pth\"):\n",
     "    torch.save(model.state_dict(), path)\n",
     "    print(f\"Model saved to {path}.\")\n",
     "\n",
-    "def load_model(path=\"../model/api/char_predictor.pth\"):\n",
+    "def load_model(path=\"../../model/api/char_predictor.pth\"):\n",
     "    model = CharPredictor(vocab_size)\n",
     "    model.load_state_dict(torch.load(path))\n",
     "    model.eval()\n",
@@ -261,8 +261,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-12T12:22:16.427822900Z",
-     "start_time": "2025-05-12T12:22:16.362265800Z"
+     "end_time": "2025-06-07T19:13:10.930896200Z",
+     "start_time": "2025-06-07T19:13:10.843731600Z"
     }
    },
    "id": "7f482deef27678c4"
@@ -279,22 +279,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model loaded from ../model/api/char_predictor.pth.\n",
+      "Model loaded from ../../model/api/char_predictor.pth.\n",
       "Prediction Probabilities:\n",
       "{\n",
-      "  \"e\": 0.2237,\n",
-      "  \"c\": 0.2158,\n",
-      "  \"p\": 0.1782,\n",
-      "  \"t\": 0.1388,\n",
-      "  \"i\": 0.0792\n",
+      "  \"o\": 0.4151,\n",
+      "  \"I\": 0.0925,\n",
+      "  \"a\": 0.0903,\n",
+      "  \"e\": 0.0778,\n",
+      "  \"O\": 0.0725\n",
       "}\n",
-      "Completed sentence: nexe\n"
+      "Completed sentence: HELo\n"
      ]
     }
    ],
@@ -337,7 +337,7 @@
     "    model = load_model()\n",
     "    \n",
     "    # Provide test input\n",
-    "    test_sentence = \"nex\"\n",
+    "    test_sentence = \"A DARK HAND HEL\"\n",
     "    result = predict_next_chars(model, test_sentence, top_k=5)\n",
     "    \n",
     "    # Display result\n",
@@ -352,8 +352,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-05-12T12:22:16.429828700Z",
-     "start_time": "2025-05-12T12:22:16.382892900Z"
+     "end_time": "2025-06-07T19:13:10.932401300Z",
+     "start_time": "2025-06-07T19:13:10.861153100Z"
     }
    },
    "id": "87b78372b70d9bb5"
